--- a/need for JS/need for JS/style.css
+++ b/need for JS/need for JS/style.css
@@ -27,3 +27,35 @@
     background: #fff;
     left: 145px;
 }
+
+.start {
+    position: absolute;
+    left: 0;
+    top: 0;
+    margin: 0;
+    width: 100%;
+    padding: 2rem 0;
+    text-align: center;
+    z-index: 200;
+    color: #fff;
+    font-size: 1.5 rem;
+    background: black;
+    cursor: pointer;
+    font-family: sans-serif;
+    font-weight: 700;
+}
+
+.score {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background: black;
+    padding: 1 rem 0;
+    z-index: 200;
+    font-size: 1.5 rem;
+    color: skyblue;
+    text-align: center;
+    font-family: sans-serif;
+    font-weight: 500;
+}
